trabalhando com TSyringe, refatorando especificacao, criando migration de especificacao e documentando aplicacao com swagger
